# dexbotic

./: .gitignore  pyproject.toml
dexbotic/config/: libero_cogact_ppo.yaml  libero_dm0_ppo.yaml  libero_pi05_ppo.yaml  libero_pi0_ppo.yaml
dexbotic/config/model/: dexbotic_cogact.yaml  dexbotic_dm0.yaml  dexbotic_pi0.yaml  dexbotic_pi05.yaml
dexbotic/data/dataset/: dex_dataset.py
dexbotic/data/dataset/transform/: action.py  common.py  language.py  multimodal.py
dexbotic/exp/: hybrid_pi05_exp.py
dexbotic/model/pi05/: hybrid_pi05_arch.py
dexbotic/rl/: __init__.py  _embodied_cli.py  model_rl_libero_cogact.py  model_rl_libero_dm0.py  model_rl_libero_pi0.py  model_rl_libero_pi05.py  rlinf_registry.py
dexbotic/rl/rlinf_bridge/: __init__.py  dexbotic_cogact_policy.py  dexbotic_dm0_policy.py  dexbotic_pi05_policy.py  dexbotic_pi0_policy.py  norm_stats_utils.py
dexbotic/tokenization/: process.py
hardware/docs/: xlerobot_inference_example.md
playground/benchmarks/libero/: libero_dm0.py
